añadido el feed a la platillas

--- a/seguimiento/templates/convocatorias/convocatoria_base.html
+++ b/seguimiento/templates/convocatorias/convocatoria_base.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Convocatorias Contaminadas{% endblock %}</title>
+
+    <link rel="alternate" href="/feed/" title="RSS Feed de Convovatorias" type="application/rss+xml">
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     
