--- a/seguimiento/templates/convocatorias/convocatoria_detail.html
+++ b/seguimiento/templates/convocatorias/convocatoria_detail.html
@@ -1,7 +1,9 @@
 {% extends "convocatorias/convocatoria_base.html" %}
 
 {% block content-header %}
-<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a></h2>
+<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a>
+    <a class="pure-button" href="/feed/">Feed</a>
+</h2>
 {% endblock %}
 
 {% block content %}
