--- a/seguimiento/templates/convocatorias/convocatoria_list.html
+++ b/seguimiento/templates/convocatorias/convocatoria_list.html
@@ -1,7 +1,9 @@
 {% extends "convocatorias/convocatoria_base.html" %}
 
 {% block content-header %}
-<h2 class="content-subhead">Convocatorias Contaminadas</h2>
+<h2 class="content-subhead">Convocatorias Contaminadas
+    <a class="pure-button" href="/feed/">Feed</a>
+</h2>
 {% endblock %}
 
 {% block content %}
