añadido es estatus de convocaria ejemplar.

--- a/seguimiento/templates/convocatorias/convocatoria_base.html
+++ b/seguimiento/templates/convocatorias/convocatoria_base.html
@@ -8,7 +8,7 @@
 
     <link rel="alternate" href="/feed/" title="RSS Feed de Convovatorias" type="application/rss+xml">
 
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" crossorigin="anonymous">
 
     <!--[if gt IE 8]><!-->
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
@@ -24,7 +24,7 @@
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
             <h2 class="brand-title">Seguimiento SICOES</h22>
-            <h3 class="brand-tagline">Seguimiento de la Comunidad de Software Libre al Plan de Implementación de Software Libre y Estándares Abiertos</h3>
+            <h3 class="brand-tagline">Seguimiento por la Comunidad de Software Libre al Plan de Implementación de Software Libre y Estándares Abiertos</h3>
 
             <nav class="nav">
                 <ul class="nav-list">
