--- a/seguimiento/templates/fechas_pasadas.html
+++ b/seguimiento/templates/fechas_pasadas.html
@@ -310,6 +310,9 @@
             <li class="pure-button-item"><a href="/" class="pure-menu-link">Inicio</a></li>
         </ul>
         <ul class="pure-menu-list">
+            <li class="pure-menu-item"><a href="/convocatorias/?ejemplares=true" class="pure-menu-link">Convocatorias Ejemplares</a></li>
+        </ul>
+        <ul class="pure-menu-list">
             <li class="pure-menu-item"><a href="/convocatorias" class="pure-menu-link">Convocatorias Contaminadas</a></li>
         </ul>
         <ul class="pure-menu-list">
