--- a/seguimiento/templates/convocatorias/convocatoria_detail.html
+++ b/seguimiento/templates/convocatorias/convocatoria_detail.html
@@ -1,9 +1,8 @@
 {% extends "convocatorias/convocatoria_base.html" %}
 
 {% block content-header %}
-<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a>
-    <a class="pure-button" href="/feed/">Feed</a>
-</h2>
+<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/feed/">Feed</a></h2>
+<h2 class="content-subhead"><a href="/convocatorias/?ejemplares=true">Convocatorias Ejemplares</a></h2>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +25,7 @@
                 {% endif %}
             </p>
             {% if convocatoria.enlace %}
-            <p>Enlace INFOSICOES: <a href="{{ convocatoria.enlace }}">{{ convocatoria.enlace }}</a></p>
+            <p>Fuente: <a href="{{ convocatoria.enlace }}">{{ convocatoria.enlace }}</a></p>
             {% endif %}
         </div>
     </section>
