</div> perdido en acción.

--- a/seguimiento/templates/convocatorias/convocatoria_list.html
+++ b/seguimiento/templates/convocatorias/convocatoria_list.html
@@ -14,6 +14,7 @@
 {% if 'ejemplares' in request.GET %}
 <div class="content">Este es un listado de convocatorias publicadas en el sistema de contrataciones estatales para la
     administración pública que que <b>sí</b> cumplen con las política de Estado y son <b>ejemplares</b>
+</div>
 {% else %}
 <div class="content">Este es un listado de convocatorias publicadas en el sistema de contrataciones estatales para la
     administración pública que <b>no</b> cumplen con la política de Estado y <b>requieren software privativo</b>
