--- a/seguimiento/templates/convocatorias/convocatoria_base.html
+++ b/seguimiento/templates/convocatorias/convocatoria_base.html
@@ -1,11 +1,10 @@
 <!doctype html>
 {% load static %}
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Convocatorias Contaminadas{% endblock %}</title>
-
+    <title>{% block title %}{% if 'ejemplares' in request.GET %}Convocatorias Ejemplares{% else %}Convocatorias Contaminadas{% endif %}{% endblock %}</title>
     <link rel="alternate" href="/feed/" title="RSS Feed de Convovatorias" type="application/rss+xml">
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" crossorigin="anonymous">
