--- a/seguimiento/templates/convocatorias/convocatoria_detail.html
+++ b/seguimiento/templates/convocatorias/convocatoria_detail.html
@@ -1,5 +1,7 @@
 {% extends "convocatorias/convocatoria_base.html" %}
 
+{% block title %}Convocatoria CUCE: {{ convocatoria.slug }}{% endblock %}
+
 {% block content-header %}
 <h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/feed/">Feed</a></h2>
 <h2 class="content-subhead"><a href="/convocatorias/?ejemplares=true">Convocatorias Ejemplares</a></h2>
