--- a/seguimiento/templates/convocatorias/convocatoria_list.html
+++ b/seguimiento/templates/convocatorias/convocatoria_list.html
@@ -1,43 +1,41 @@
 {% extends "convocatorias/convocatoria_base.html" %}
 
 {% block content-header %}
+<h2 class="content-subhead"><a href="/planes/">Planes de Implementación</a></h2>
 {% if 'ejemplares' in request.GET %}
 <h2 class="content-subhead"><a href="/convocatorias/">Convocatorias Contaminadas</a> <a class="pure-button" href="/feed/">Feed</a></h2>
 <h2 class="content-subhead">Convocatorias Ejemplares</h2>
 {% else %}
-<h2 class="content-subhead">Convocatorias Contaminadas <a class="pure-button" href="/feed/">Feed</a></h2>
+<h2 class="content-subhead">Convocatorias Contaminadas</h2>
 <h2 class="content-subhead"><a href="/convocatorias/?ejemplares=true">Convocatorias Ejemplares</a></h2>
 {% endif %}
 {% endblock %}
 
 {% block content %}
-{% if 'ejemplares' in request.GET %}
-<div class="content">Este es un listado de convocatorias publicadas en el sistema de contrataciones estatales para la
-    administración pública que que <b>sí</b> cumplen con las política de Estado y son <b>ejemplares</b>
-</div>
-{% else %}
-<div class="content">Este es un listado de convocatorias publicadas en el sistema de contrataciones estatales para la
-    administración pública que <b>no</b> cumplen con la política de Estado y <b>requieren software privativo</b>
-</div>
-{% endif %}
-{% for convocatoria in object_list %}
-<section class="post">
-    <header class="post-header">
-        <h2 class="post-title"><a href="{{ convocatoria.slug }}">{{ convocatoria.objeto }}</a></h2>
-    </header>
-
-    <div class="post-description">
-        <p>
-            En el departamento de {{ convocatoria.departamento }}, {{ convocatoria.entidad }} ha publicado el
-            {{ convocatoria.publicada }} la convocatoria <a href="{{ convocatoria.slug }}">{{ convocatoria.slug }}</a>.
-        </p>
-        <p>
-            {% if convocatoria.impugnada %}
-            <strong>Esta convocatoria ha sido impugnada el {{ convocatoria.impugnada }}</strong>
-            {% endif %}
-        </p>
+    <div class="content">Este es un listado de convocatorias publicadas en el sistema de contrataciones estatales para la
+        administración pública que
+        {% if 'ejemplares' in request.GET %}<b>sí</b>{% else %}<b>no</b>{% endif %}
+        cumplen con la política de Estado y
+        {% if 'ejemplares' in request.GET %}son <b>ejemplares</b>{% else %}<b>requieren software privativo</b>{% endif %}.
     </div>
-</section>
-{% endfor %}
+    {% for convocatoria in object_list %}
+    <section class="post">
+        <header class="post-header">
+            <h2 class="post-title"><a href="{{ convocatoria.slug }}">{{ convocatoria.objeto }}</a></h2>
+        </header>
 
-{% endblock %}
+        <div class="post-description">
+            <p>
+                En el departamento de {{ convocatoria.departamento }}, {{ convocatoria.entidad }} ha publicado el
+                {{ convocatoria.publicada }} la convocatoria <a href="{{ convocatoria.slug }}">{{ convocatoria.slug }}</a>.
+            </p>
+            <p>
+                {% if convocatoria.impugnada %}
+                <strong>Esta convocatoria ha sido impugnada el {{ convocatoria.impugnada }}</strong>
+                {% endif %}
+            </p>
+        </div>
+    </section>
+    {% endfor %}
+
+    {% endblock %}
