corregido el enlace a la AGETIC, días hasta la próxima fecha.

--- a/seguimiento/templates/planes/plan_list.html
+++ b/seguimiento/templates/planes/plan_list.html
@@ -10,7 +10,7 @@
 {% if object_list %}
 <div class="content">
     Este es un listado de Planes Institucionales de Implementación de Software Libre y Estándares Abiertos publicados en el
-    sitio Web de la <a href="https://agetic.gib.bo">AGETIC</a>.
+    sitio Web de la <a href="https://agetic.gob.bo">AGETIC</a>.
 </div>
 {% for plan in object_list %}
 <section class="post">
