--- a/seguimiento/templates/proxima_fecha.html
+++ b/seguimiento/templates/proxima_fecha.html
@@ -215,7 +215,7 @@
 <div class="splash-container">
     <div class="splash">
         <p class="splash-subhead">
-            <b>{{ proxima_fecha.hasta|date }}</b> {{ proxima_fecha.quien|safe }} {{ proxima_fecha.que|safe }}
+            En <b>{{ proxima_fecha.en_dias }}</b> días, el <b>{{ proxima_fecha.hasta|date }}</b> {{ proxima_fecha.quien|safe }} {{ proxima_fecha.que|safe }}
         </p>
     </div>
 </div>
