corregido el enlace a la AGETIC

--- a/seguimiento/templates/planes/plan_list.html
+++ b/seguimiento/templates/planes/plan_list.html
@@ -27,7 +27,7 @@
 <section class="post">
     <h1 class="post-title">
         Hasta ahora no se ha publicado ningún Plan Institucional de Implementación de Software Libre y Estándares Abiertos en el
-        sitio Web de la <a href="https://agetic.gib.bo">AGETIC</a>.
+        sitio Web de la <a href="https://agetic.gob.bo">AGETIC</a>.
     </h1>
 </section>
 {% endif %}
