corregidas las rutas para el feed RSS

--- a/seguimiento/templates/convocatorias/convocatoria_detail.html
+++ b/seguimiento/templates/convocatorias/convocatoria_detail.html
@@ -4,7 +4,7 @@
 
 {% block content-header %}
 <h2 class="content-subhead"><a href="/planes/">Planes de Implementación</a></h2>
-<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/feed/convocatorias">Feed</a></h2>
+<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/convocatorias/feed">Feed</a></h2>
 <h2 class="content-subhead"><a href="/convocatorias/?ejemplares=true">Convocatorias Ejemplares</a></h2>
 {% endblock %}
 
