--- a/seguimiento/templates/convocatorias/convocatoria_base.html
+++ b/seguimiento/templates/convocatorias/convocatoria_base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Convocatorias {% if 'ejemplares' in request.GET %}Ejemplares{% else %}Contaminadas{% endif %}{% endblock %}</title>
-    <link rel="alternate" href="/feed/convocatorias" title="RSS Feed de Convovatorias" type="application/rss+xml">
+    <link rel="alternate" href="/convocatorias/feed" title="RSS Feed de Convovatorias" type="application/rss+xml">
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" crossorigin="anonymous">
 
