--- a/seguimiento/templates/planes/plan_list.html
+++ b/seguimiento/templates/planes/plan_list.html
@@ -2,7 +2,7 @@
 
 {% block content-header %}
 <h2 class="content-subhead">Planes de Implementación</h2>
-<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/feed/">Feed</a></h2>
+<h2 class="content-subhead"><a href="/convocatorias">Convocatorias Contaminadas</a> <a class="pure-button" href="/convocatorias/feed">Feed</a></h2>
 <h2 class="content-subhead"><a href="/convocatorias/?ejemplares=true">Convocatorias Ejemplares</a></h2>
 {% endblock %}
 
