--- a/seguimiento/templates/fechas_pasadas.html
+++ b/seguimiento/templates/fechas_pasadas.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fechas pasadas: Plan de Implementación de Softwae Libre y Estándares Abiertos</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
-          integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-
-    <!--[if gt IE 8]><!-->
+    <title>Fechas pasadas &mdash; Plan de Implementación de Softwae Libre y Estándares Abiertos</title>
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
-    <!--<![endif]-->
 
     <style>
         * {
