título de tarjeta Twitter era demasiado largo

--- a/seguimiento/templates/planes/plan_list.html
+++ b/seguimiento/templates/planes/plan_list.html
@@ -3,7 +3,7 @@
 {% load twitter_cards %}
 
 {% block twitter_cards %}
-    {% with title="Planes Institucionales de Implementación de Software Libre y Estándares Abiertos" description="Hasta ahora no se ha publicado ningún Plan Institucional de Implementación de Software Libre y Estándares Abiertos en el sitio Web de la AGETIC" %}
+    {% with title="Planes de Implementación de Software Libre y Estándares Abiertos" description="Hasta ahora no se ha publicado ningún Plan Institucional de Implementación de Software Libre y Estándares Abiertos en el sitio Web de la AGETIC" %}
         {% summary_card title=title description=description %}
     {% endwith %}
 {% endblock %}
