ya no se muestra la cuenta de planes

--- a/seguimiento/templates/planes/plan_list.html
+++ b/seguimiento/templates/planes/plan_list.html
@@ -17,8 +17,7 @@
 {% block content %}
     {% if object_list %}
 <div class="content">
-    Este es un listado de los {{ object_list.count}} Planes Institucionales de Implementación de Software Libre y Estándares
-    Abiertos publicados en el
+    Este es un listado de los Planes Institucionales de Implementación de Software Libre y Estándares Abiertos publicados en el
     <a href="https://digital.gob.bo/en/planes/plan-de-implementacion-de-software-libre-y-estandares-abiertos-2017-2025">sitio Web</a>
     de la <a href="https://agetic.gob.bo">AGETIC</a>.
 </div>
